[package]
name = "myweb"
version = "0.1.0"
authors = ["FengchenX <fengchenxiaonvsheng@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myweb"
path = "src/lib.rs"

[dependencies]
#actix-web = { git = "https://github.com/actix/actix-web" }
actix-web = "2.0"
actix-rt = "1.0"

actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"

[workspace]
members = [
#    "src/bin/my",
    "work/basics",
]

[[bin]]
name="bin1"
path = "bin/my/main.rs"